# Changelog
(All changes in 1.53 - 2.0.1 were made by IgorTheLight, excluding patch 1.6.1)

## Version 2.0.1:

- Fixed a crash where user tries to click on an empty space in RequiredMods when it has only one item
- Fixed a crash where user didn't have any Profiles and tries to click on "SETTINGS" button
- Application.Exit() was changed to a more correct way of terminating a program (thanks, FragJacker!)
- A few small tweaks

## Version 2.0.0:

- Added a new form - System Performance Manager. This tool is able to change system-wise settings for better performance
- Added a new form - About (authors + homepage + updates + changelog + license). Yes - DoW Mod Manager could update to a newer version just with ONE click of a mouse!
- Added a new form - Message - now all error messages will have the same theme as all main forms (and it's helper class - ThemedMessageBox)
- Replaced all error messages from MessageBox to ThemedMessageBox
- Added ability to search for mods in Mod Downloader (to achieve this result, the whole ModDownloaderForm was rewritten).
- Added ability to find a missing mod
- Added ability to create, rename and delete Player Profiles (in Settings Manager)
- Added ability to change and save "Invert Declination", "Invert Pan" and "Scroll Rate" in Settings Manager
- Now all profiles are shown as PLayer names instead of numbers ("YourName" instead of "Profile1")
- Added version descriptions to all mods in Mod Downloader
- Added version detection for mods in Mod Manager
- Added ability to show Critical errors from warnings.log
- Added a new mod to download - Imperial Fists (Version 3.0)
- Added a new mod to download - Dawn Of Skirmish AI Mod (Version 3.20)
- Updated CornCobMan's Fun Mod for Soulstorm (from 1.87 to 1.88.4)
- Updated Veteran Mod for Dark Crusade with additional file links that are required
- Fixed a bug where ScrollRate and Gamma could be saved incorrectly